# tadpose

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  local_paths.template.json  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: api.rst  conf.py  index.rst  installation.rst  overview.rst  requirements.txt  usage.rst
environments/: aoraki_dlc.yml  deeplabcut.yml
slurm/: README.md  array_clustering.sh  assign_new_data.sh  bout_durations.sh  build_and_assign_new_data.sh  distribute_jobs.sh  extract_features.sh  flexible_clustering.sh  get_jobs_and_time_left.py  load_paths.sh  main_clustering.sh  move_jobs.sh  run_slurm_superprotos.sh  selection_metrics.sh
src/tadpose/: __init__.py  camera_manager.py  centroid_matching.py  cli.py  cluster_meta.py  cluster_plotting.py  clustering.py  config.py  csv_formatter.py  database.py  dlc_runner.py  experiment_manager.py  feature_cleaning.py  feature_extraction.py  file_manager.py  filename_utils.py  frame_getter.py  input_folder_manager.py  label_analysis.py  meta_analysis_runner.py  metadata_ingest.py  normalisation.py  plate_manager.py  posture_dynamics.py  preset_manager.py  result_manager.py  run_new_videos.py  run_per_video.py  series_info_manager.py  slurm_jobs.py  video_info.py  video_segmentation.py  viz_constants.py  well_detection.py  workflow.py  zscore_apply.py
src/tadpose/_legacy/: NOTE_workflow.md  trajectory_io.py  workflow.py
src/tadpose/analysis/: AggregateSuperPrototypesAnalysis.py  SlurmSuperPrototypesAnalysis.py  __init__.py  add_tadpole_group_id.py  add_velocity_cluster_labels.py  analyse_proportions_across_clusterings.ipynb  analyse_prototypes.ipynb  assign_new_data_to_clusters.py  biologically_relevant_HMM.py  bout_durations.py  build_and_assign.py  cluster_map.py  cluster_proportion_meta_analysis.py  combine_labels_with_data.py  generate_new_labelling.py  hmm_bio.py  hmm_core.py  internal_metrics.py  make_scatter_box_whisker_group_comparisons.py  markov_chain.py  markov_chain_groups.py  multinomial_confint_plot_proportions_across_all_trials.py  non_multiomial_plot_proportions_across_trials.py  plot_cluster_proportion_differences.py  plot_group_cluster_difference.py  plot_superprototypes.py  proportions.py  prototype_cards.py  reverse_inference.py  stats.py  viz_centroids.py  viz_durations.py  viz_proportions.py
src/tadpose/analysis/_legacy/: combine_labels_and_velocity_with_data.py  extract_individual_group_proportion_data.py  get_permutation_significant_cluster_differences.py  get_significant_group_comparisons.py  plot_average_velocity_differences.py  plot_cluster_differences_multinomial.py  plot_comparison_with_baseline_nd2_and_ptz.py
src/tadpose/analysis/kinematics/: __init__.py  aggregate.py  cli.py  kinematic_constants.py  loader.py  metrics.py  viz.py  well_geometry.py
src/tadpose/analysis/report/: __init__.py  build.py  cli.py  data.py  figures.py
tests/: conftest.py  test_assign_new_data.py  test_bout_durations.py  test_build_and_assign.py  test_cluster_naming.py  test_config.py  test_feature_extraction.py  test_feature_extraction_cli.py  test_internal_metrics.py  test_kinematics.py  test_managers.py  test_metadata_ingest.py  test_proportions.py  test_prototype_cards.py  test_report.py  test_reverse_inference.py  test_run_per_video.py  test_stats.py  test_viz_constants.py  test_viz_durations.py  test_well_detection.py
