[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tadpose"
dynamic = ["version"]
description = "Automated behavioural phenotyping of Xenopus laevis tadpoles from 24-well plate video."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Alexander R. H. Matthews"},
    {name = "Caroline Beck"},
    {name = "Bart R. H. Geurten", email = "bart.geurten@otago.ac.nz"},
]
keywords = [
    "xenopus", "tadpole", "seizure", "behavioural-analysis",
    "deeplabcut", "k-means", "posture-dynamics", "24-well-plate",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "opencv-python>=4.8",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "sqlalchemy>=2.0",
    "tables>=3.8",
    "scikit-learn>=1.3",
    "scikit-posthocs>=0.7",
    "statsmodels>=0.14",
    "rerandomstats @ git+https://github.com/zerotonin/reRandomStats.git",
    "networkx>=3.0",
    "prettytable>=3.0",
    "tqdm>=4.60",
    "kneed>=0.8",
]

[project.optional-dependencies]
gpu = ["cuml-cu12"]
dev = ["pytest>=7.0", "pytest-cov", "ruff>=0.6", "sphinx", "sphinx-rtd-theme"]

[project.scripts]
tadpose = "tadpose.cli:main"

[project.urls]
Repository = "https://github.com/zerotonin/tadpose"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Version is derived from git tags (e.g. v0.1.0).  No fallback file is
# written; the installed package exposes it via importlib.metadata.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
# _legacy dirs hold parked, un-migrated student code; do not lint them.
extend-exclude = ["**/_legacy"]

[tool.ruff.lint.per-file-ignores]
# The interactive DB managers import the ORM via `from tadpose.database
# import *`.  Explicit imports are deferred to the orchestrator-revival
# phase (which reworks these modules against the yolo_tools template).
"src/tadpose/experiment_manager.py" = ["F403", "F405"]
"src/tadpose/plate_manager.py" = ["F403", "F405"]
"src/tadpose/result_manager.py" = ["F403", "F405"]
